# streetmangler

./: .travis.yml  CMakeLists.txt  README  README.API  README.md
.github/workflows/: ci.yml
cmake/: FindICU.cmake
contrib/tspell/tspell/: stringtrie.hh  triebase.hh  unitrie.hh
data/: check.sh  en_GB.txt  grep-new.sh  ru.txt  ru_BE.txt  ru_BY.txt  ru_RU.txt  sort.sh  uk_UA.txt
data/ru/: all.txt  ambig_nouns.txt  ambiguities.txt  areas.txt  bridges.txt  crimea.txt  exceptions.txt  fixme.txt  main.txt  multistatus.txt  nested.txt  routes.txt  unlisted.txt  unofficial.txt
lib/: database.cc  locale.cc  name.cc  stringlistparser.cc
lib/locales/: en.cc  ru.cc  uk.cc
lib/streetmangler/: database.hh  locale.hh  name.hh  stringlistparser.hh
scripts/: common.sh  dbmaint.sh  grep-new.sh
swig/: CMakeLists.txt  Makefile  _streetmangler.i  python_test.py  streetmangler.i  test_database.py
swig/java/: CMakeLists.txt  java_test.java
swig/perl/: CMakeLists.txt  perl_test.pl
swig/python/: CMakeLists.txt  python_test.py
tests/: canonical_test.cc  database_test.cc  database_testing.hh  locale_internal_test.cc  locale_test.cc  testing.hh  tokenizer_test.cc
utils/: cluster_names.cc  from_osm.cc  name_aggregator.cc  name_aggregator.hh  name_extractor.cc  name_extractor.hh  osm_name_extractor.cc  osm_name_extractor.hh  process_names.cc
