FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

SET_SOURCE_FILES_PROPERTIES(streetmangler.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE(streetmangler python streetmangler.i)
SWIG_LINK_LIBRARIES(streetmangler ${PYTHON_LIBRARIES} streetmangler)
