# depends
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

# definitions
ADD_DEFINITIONS(-w) # disable warnings for generated code

# bindings
IF(WITH_PYTHON)
	ADD_SUBDIRECTORY(python)
ENDIF(WITH_PYTHON)

IF(WITH_PERL)
	ADD_SUBDIRECTORY(perl)
ENDIF(WITH_PERL)

IF(WITH_JAVA)
	ADD_SUBDIRECTORY(java)
ENDIF(WITH_JAVA)
